--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   bot_toast: ^3.0.5
   cached_network_image: ^2.3.3
 
+  intl: ^0.16.1
+  flutter_html: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
